<resources>
    <string name="temp_converter_title">Konverter Suhu Interaktif</string>
    <string name="app_subtitle">Coffeeenak.id</string>
    <string name="temp_initial_temperature_label">Suhu Awal</string>
    <string name="temp_input_hint">Masukkan Nilai Suhu</string>
    <string name="temp_convert_from_label">Konversi Dari</string>
    <string name="temp_convert_to_label">Konversi Ke</string>
    <string name="temp_convert_button">Konversikan</string>
    <string name="temp_conversion_result_label">Hasil Konversi:</string>
    <string name="temp_initial_result">0.0 °C</string>
    <string name="sapa">Hai, Byatara!</string>
    <string name="menuutama">Menu Utama</string>
    <string name="Menulain">Menu Lain</string>
    <string name="Menutambahan">Menu Tambahan</string>
    <string name="MenuAplikasi">Menu Aplikasi</string>
    <string name="Menupesanan">Menu Pesanan</string>
    <string name="namapemesan">Nama Pemesan</string>
    <string name="minuman">Minuman</string>
    <string name="makanan">Makanan</string>
    <string name="jumlah">Jumlah</string>
    <string name="es">Es</string>
    <string name="profil">Profil</string>
    <string name="Edit_Profil_Kamu">Edit Profil Kamu</string>
    <string name="sekolah">Sekolah</string>
    <string name="kelas">Kelas</string>
    <string name="lagu">Lagu</string>
    <string name="hoby">Hobi</string>
    <string name="portofolio">Portofolio</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="datapribadi">Data Pribadi</string>
    <string name="pemrograman">Pemrograman</string>
    <string name="framework">Framework</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="uh">Tanggal Lahir</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="panas">Panas</string>
    <string name="menu">Daftar</string>
    <string name="form">Formulir</string>
    <string name="calculator">Kalkulator</string>
    <string name="temperature">Temperatur</string>
    <string name="contact">Kontak Kami</string>
    <string name="exit">Keluar</string>
    <string name="app_name">Aplikasi Pertama</string>

    <!-- Exit Confirmation -->
    <string name="exit_confirmation_title">Yakin Ingin Keluar?</string>
    <string name="exit_confirmation_cancel">Batal</string>
    <string name="exit_confirmation_yes">Ya</string>

    <!-- Form Pendaftaran -->
    <string name="form_registration_title">Form Pendaftaran</string>
    <string name="form_hint_name">Masukan Nama Anda</string>
    <string name="form_hint_address">Masukan Alamat Anda</string>
    <string name="form_hint_phone">Masukan Nomor HP</string>
    <string name="form_label_religion">Agama</string>
    <string name="form_label_gender">Gender</string>
    <string name="form_gender_male">Laki-laki</string>
    <string name="form_gender_female">Perempuan</string>
    <string name="form_label_hobby">Hobi</string>
    <string name="form_hobby_reading">Membaca</string>
    <string name="form_hobby_writing">Menulis</string>
    <string name="form_hobby_music">Mendengarkan Musik</string>
    <string name="form_hobby_cooking">Memasak</string>
    <string name="form_button_save">Simpan</string>

    <!-- Hasil Form -->
    <string name="form_result_title">Hasil Form</string>
    <string name="form_result_label_name">Nama</string>
    <string name="form_result_label_address">Alamat</string>
    <string name="form_result_label_phone">Nomor HP</string>
    <string name="form_result_label_religion">Agama</string>
    <string name="form_result_label_gender">Gender</string>
    <string name="form_result_label_hobby">Hobi</string>
    <string name="form_result_initial_value">-</string>
    <string name="form_result_button_back">Kembali</string>

    <!-- Nota Pembayaran -->
    <string name="receipt_title">Nota Pembayaran</string>
    <string name="receipt_customer_name_placeholder">Pemesan: %s</string>
    <string name="receipt_order_details">Rincian Pesanan</string>
    <string name="receipt_total_placeholder">TOTAL: %s</string>
    <string name="receipt_button_finish_payment">Selesaikan Pembayaran</string>

    <!-- Splash Screen -->
    <string name="splash_brand_subtitle">Temani Hari-Harimu Dengan\nNuansa Kopi Yang Lezat</string>
    <string name="splash_loading">Memuat...</string>
    <string name="splash_version">Ver 1.0.23</string>

    <string-array name="list_agama">
        <item>Islam</item>
        <item>Kristen</item>
        <item>Katholik</item>
        <item>Hindu</item>
        <item>Buddha</item>
        <item>Konghucu</item>
    </string-array>
    <string-array name="temperature_units">
        <item>Celsius (°C)</item>
        <item>Fahrenheit (°F)</item>
        <item>Kelvin (K)</item>
    </string-array>

</resources>